--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
 		<dependency>
 			<groupId>com.google.cloud.bigdataoss</groupId>
 			<artifactId>gcs-connector</artifactId>
-			<version>1.9.4-hadoop3</version>
+			<version>hadoop3-1.9.18</version>
 			<!-- Can be removed after upgrading to hadoop 3.3.0 -->
 			<exclusions>
 				<exclusion>
@@ -58,7 +58,7 @@
 		<dependency>
 			<groupId>org.apache.hadoop</groupId>
 			<artifactId>hadoop-aws</artifactId>
-			<version>3.3.0</version>
+			<version>3.2.0</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
