--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,13 @@
 			</exclusions>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+		<dependency>
+		    <groupId>org.apache.logging.log4j</groupId>
+		    <artifactId>log4j-core</artifactId>
+		    <version>2.17.0</version>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/com.google.cloud.bigdataoss/gcs-connector -->
 		<dependency>
 			<groupId>com.google.cloud.bigdataoss</groupId>
