--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -50,11 +50,38 @@ jobs:
           labels: ${{ steps.docker_meta.outputs.labels }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
-          outputs: type=docker,dest=/tmp/workload-standard-${{ steps.docker_meta.outputs.labels["org.opencontainers.image.version"] }}.tar
+          outputs: type=docker,dest=/tmp/workload-standard-${{ github.sha }}.tar
+      - name: Upload artifact
+        if: ${{ github.event_name == 'pull_request' }}
+        uses: actions/upload-artifact@v2
+        with:
+          name: docker-image
+          path: /tmp/workload-standard-${{ github.sha }}.tar
+          retention-days: 1
+
+    scan:
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: docker-image
+          path: /tmp
       - name: Run Trivy vulnerability scanner
+        if: ${{ github.event_name == 'pull_request' }}
         uses: aquasecurity/trivy-action@master
         with:
-          input: '/tmp/workload-standard-${{ steps.docker_meta.outputs.labels["org.opencontainers.image.version"] }}.tar'
+          input: '/tmp/workload-standard:${{ github.sha }}.tar'
+          format: 'table'
+          exit-code: '0'
+          ignore-unfixed: true
+          vuln-type: 'os,library'
+          severity: 'CRITICAL,HIGH'
+      - name: Run Trivy vulnerability scanner
+        if: ${{ github.event_name != 'pull_request' }}
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: ${{ steps.docker_meta.outputs.tags }}
           format: 'table'
           exit-code: '0'
           ignore-unfixed: true
