--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -59,7 +59,10 @@ jobs:
           path: /tmp/workload-standard-${{ github.sha }}.tar
           retention-days: 1
 
-    scan:
+  scan:
+    runs-on: [self-hosted, docker, integration]
+    needs: build
+    steps:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       - name: Download artifact
