--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -70,7 +70,9 @@ jobs:
         with:
           name: docker-image
           path: tmp
-      - name: Run Trivy vulnerability scanner
+      - name: Generate .trivyignore
+        run: echo "CVE-2019-17571" > .trivyignore
+      - name: Run Trivy vulnerability scanner for MEDIUM and HIGH severity
         if: ${{ github.event_name == 'pull_request' }}
         uses: aquasecurity/trivy-action@master
         with:
@@ -79,8 +81,8 @@ jobs:
           exit-code: '0'
           ignore-unfixed: true
           vuln-type: 'os,library'
-          severity: 'CRITICAL,HIGH'
-      - name: Run Trivy vulnerability scanner
+          severity: 'MEDIUM,HIGH'
+      - name: Run Trivy vulnerability scanner for MEDIUM and HIGH severity
         if: ${{ github.event_name != 'pull_request' }}
         uses: aquasecurity/trivy-action@master
         with:
@@ -89,4 +91,24 @@ jobs:
           exit-code: '0'
           ignore-unfixed: true
           vuln-type: 'os,library'
-          severity: 'CRITICAL,HIGH'
+          severity: 'MEDIUM,HIGH'
+      - name: Run Trivy vulnerability scanner for CRITICAL severity
+        if: ${{ github.event_name == 'pull_request' }}
+        uses: aquasecurity/trivy-action@master
+        with:
+          input: tmp/workload-standard-${{ github.sha }}.tar
+          format: 'table'
+          exit-code: '1'
+          ignore-unfixed: true
+          vuln-type: 'os,library'
+          severity: 'CRITICAL'
+      - name: Run Trivy vulnerability scanner for CRITICAL severity
+        if: ${{ github.event_name != 'pull_request' }}
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: ${{ steps.docker_meta.outputs.tags }}
+          format: 'table'
+          exit-code: '1'
+          ignore-unfixed: true
+          vuln-type: 'os,library'
+          severity: 'CRITICAL'
