--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -73,6 +73,7 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       - name: Download artifact
+        if: ${{ github.event_name == 'pull_request' }}
         uses: actions/download-artifact@v2
         with:
           name: docker-image
