--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,6 +12,8 @@ on:
 jobs:
   build:
     runs-on: [self-hosted, docker, integration]
+    outputs:
+      image-tags: ${{ steps.docker_meta.outputs.tags }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -106,7 +108,7 @@ jobs:
         if: ${{ github.event_name != 'pull_request' }}
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: ${{ steps.docker_meta.outputs.tags }}
+          image-ref: ${{ needs.build.outputs.image-tags }}
           format: 'table'
           exit-code: ${{ matrix.exit-code }}
           ignore-unfixed: true
