--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -108,6 +108,7 @@ jobs:
           ignore-unfixed: true
           vuln-type: 'os,library'
           severity: ${{ matrix.severity }}
+        continue-on-error: true
       - name: Run Trivy vulnerability scanner for ${{ matrix.severity }} severity
         if: ${{ github.event_name != 'pull_request' }}
         uses: aquasecurity/trivy-action@master
@@ -120,6 +121,7 @@ jobs:
           ignore-unfixed: true
           vuln-type: 'os,library'
           severity: ${{ matrix.severity }}
+        continue-on-error: true
       - name: Upload Trivy scan results to GitHub Security tab
         if: ${{ github.event_name == 'pull_request' }}
         uses: github/codeql-action/upload-sarif@v1
