--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,8 +12,11 @@ on:
 jobs:
   build:
     runs-on: [self-hosted, docker, integration]
+    env:
+      # list of Docker images to use as base name for tags
+      IMAGE_REPO: quay.io/basisai/workload-standard
     outputs:
-      image-tags: ${{ steps.docker_meta.outputs.version }}
+      image-tags: ${{ env.IMAGE_REPO }}:${{ steps.docker_meta.outputs.version }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -21,7 +24,7 @@ jobs:
         id: docker_meta
         uses: docker/metadata-action@v3
         with:
-          images: quay.io/basisai/workload-standard # list of Docker images to use as base name for tags
+          images: ${{ env.IMAGE_REPO }}
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
